PD-3811 fix class overlap

--- a/src/app/cdk/is-this-you/is-this-you.component.scss
+++ b/src/app/cdk/is-this-you/is-this-you.component.scss
@@ -15,7 +15,7 @@
   }
 }
 
-.fixed {
+.fixedClass {
   display: flex;
   justify-content: flex-end;
   flex-shrink: 0;
@@ -63,7 +63,7 @@ a:hover {
 
 :host.columns-8,
 :host.columns-4 {
-  .fixed {
+  .fixedClass {
     flex-direction: column;
   }
 }
